Bug 15362 - a lot of messages: get_static_share_mode_data: get_static_share_mode_data_fn failed: NT_STATUS_NOT_FOUND
Summary: a lot of messages: get_static_share_mode_data: get_static_share_mode_data_fn ...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.18.1
Hardware: x86 Linux
: P5 normal with 1 vote (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-24 09:28 UTC by Georg Weickelt
Modified: 2023-05-31 16:11 UTC (History)
2 users (show)

See Also:


Attachments
Patch for v4-18-test (1.29 KB, patch)
2023-04-30 17:23 UTC, Stefan Metzmacher
bjacke: review+
metze: review? (slow)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Georg Weickelt 2023-04-24 09:28:16 UTC
After updating to version 18.1 on OpenSuse 15.4, I get a lot of error messages like this every minute:


Apr 24 11:00:50 linux smbd[4168]:   get_static_share_mode_data: get_static_share_mode_data_fn failed: NT_STATUS_NOT_FOUND
Apr 24 11:01:43 linux smbd[4168]: [2023/04/24 11:01:43.357257,  0] ../../source3/locking/share_mode_lock.c:890(get_static_share_mode_data)
Apr 24 11:01:43 linux smbd[4168]:   get_static_share_mode_data: get_static_share_mode_data_fn failed: NT_STATUS_NOT_FOUND
Apr 24 11:01:43 linux smbd[4168]: [2023/04/24 11:01:43.362549,  0] ../../source3/locking/share_mode_lock.c:890(get_static_share_mode_data)
Apr 24 11:01:43 linux smbd[4168]:   get_static_share_mode_data: get_static_share_mode_data_fn failed: NT_STATUS_NOT_FOUND
Apr 24 11:02:56 linux smbd[4168]: [2023/04/24 11:02:56.110280,  0] ../../source3/locking/share_mode_lock.c:890(get_static_share_mode_data)
Apr 24 11:02:56 linux smbd[4168]:   get_static_share_mode_data: get_static_share_mode_data_fn failed: NT_STATUS_NOT_FOUND
Apr 24 11:02:56 linux smbd[4168]: [2023/04/24 11:02:56.116536,  0] ../../source3/locking/share_mode_lock.c:890(get_static_share_mode_data)
Apr 24 11:02:56 linux smbd[4168]:   get_static_share_mode_data: get_static_share_mode_data_fn failed: NT_STATUS_NOT_FOUND

It doesn't seem to entail any further problems, but is also reported by other users: https://bbs.archlinux.org/viewtopic.php?id=284827
https://stackoverflow.com/questions/75919065/error-logged-every-time-i-transfer-files-over-samba
Comment 1 Samba QA Contact 2023-04-24 14:14:04 UTC
This bug was referenced in samba master:

eafcef18584c264dc68dd95fbd8aa39218199446
Comment 2 nanericwang 2023-04-30 09:22:05 UTC
4.18.2, same issue.
Comment 3 Stefan Metzmacher 2023-04-30 17:23:46 UTC
Created attachment 17876 [details]
Patch for v4-18-test
Comment 4 Jule Anger 2023-05-05 11:49:33 UTC
Pushed to autobuild-v4-18-test.
Comment 5 Samba QA Contact 2023-05-09 13:16:03 UTC
This bug was referenced in samba v4-18-test:

128a80758fd389333f2ab30981a5fe626d01e434
Comment 6 Jule Anger 2023-05-09 14:33:58 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2023-05-31 16:11:09 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.3):

128a80758fd389333f2ab30981a5fe626d01e434